--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,6 +56,16 @@ const hasEducation = siteConfig.education && siteConfig.education.length > 0;
           </li>
         )
       }
+      <li>
+        <a
+          href="https://medium.com/@tempifyos"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-gray-700 hover:text-black transition-colors font-medium"
+        >
+          Blog
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
